added get present ingredients endpoint
