# swagger/responses.yml
@@ -113,4 +113,12 @@ components:
                 type: number
                 description: "the Id of the newly created queue entry"
                 example: 1234
-
+    RecipesDTO:
+      description: list of recipes
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/IRecipesResponse"
+            
+ 
+ 
